<resources>
    <string name="app_name">Quiz App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quiz_name">QUIZ ON GREAT INDIAN PERSONALITIES</string>
    <string name="ques_one">1. Who is known as the \'Father of the Nation\'?</string>
    <string name="gandhi">Mahatama Gandhi</string>
    <string name="bose">Subhash Chandra Bose</string>
    <string name="ques_two">2. Mahatama Gandhi started which movement?</string>
    <string name="satyagrah">Satyagraha Movement</string>
    <string name="dandi">Dandi March</string>
    <string name="swadeshi">Swadeshi Movement</string>
    <string name="ques_three">3. Who was the first Prime Minister of India?</string>
    <string name="nehru">Pandit JawaharLal Nehru</string>
    <string name="rajendra">Rajendra Prasad</string>
    <string name="ques_four">4. Who is known as the \'Missile Man of India\'?</string>
    <string name="kalam">Dr. A.P.J. Abdul Kalam</string>
    <string name="sarabhai">Dr. Vikram Sarabhai</string>
    <string name="ques_five">5. Who is also known as \'Iron Man\' of India?</string>
    <string name="ques_six">6. In which year India got independence?</string>
    <string name="patel">Sardar Vallabhbhai Patel</string>
    <string name="lala">Lala Lajpat Rai</string>
    <string name="year">Enter year here</string>
    <string name="ques_seven">7. Rani Lakshmi Bai is also known by names?</string>
    <string name="jhansi">Jhansi Ki Rani</string>
    <string name="mannu">Mannu</string>
    <string name="iron_lady">Iron Lady</string>
    <string name="ques_eight">8. Identify the image and write his name</string>
    <string name="name_hint">Enter name here</string>
    <string name="button">SUBMIT</string>



</resources>
