<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                style="@style/HeightWidth"
                android:text="@string/quiz_name"
                android:textSize="20sp"
                android:textColor="#000000"
                android:background="#CCFF90"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:text="@string/ques_one"
                style="@style/HeightWidth"
                android:background="#FF8A80"/>
        <RadioGroup
                style="@style/HeightWidth"
                android:layout_marginBottom="10dp"
                android:background="#FF8A80">
            <RadioButton
                    android:id="@+id/Mahatama_Gandhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gandhi"
                    android:onClick="correctAnswer"/>
            <RadioButton
                    android:id="@+id/bose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bose"
                    android:onClick="correctAnswer"/>
        </RadioGroup>
        <TextView
                  style="@style/HeightWidth"
                  android:background="#E1BEE7"
                  android:text="@string/ques_two"/>
        <CheckBox
                  android:id="@+id/Satyagraha"
                  style="@style/HeightWidth"
                  android:background="#E1BEE7"
                  android:text="@string/satyagrah"/>
        <CheckBox
                android:id="@+id/Dandi"
                style="@style/HeightWidth"
                android:background="#E1BEE7"
                android:text="@string/dandi"/>
        <CheckBox
                android:id="@+id/Swadeshi"
                style="@style/HeightWidth"
                android:text="@string/swadeshi"
                android:background="#E1BEE7"
                android:layout_marginBottom="10dp"/>
        <TextView
                style="@style/HeightWidth"
                android:background="#FFCDD2"
                android:text="@string/ques_three"/>
        <RadioGroup
                style="@style/HeightWidth"
                android:background="#FFCDD2"
                android:layout_marginBottom="10dp">
            <RadioButton
                    android:id="@+id/Nehru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nehru"
                    android:onClick="correctAnswer"/>
            <RadioButton
                    android:id="@+id/rajendra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rajendra"
                    android:onClick="correctAnswer"/>
        </RadioGroup>
        <TextView
                style="@style/HeightWidth"
                android:background="#BBDEFB"
                android:text="@string/ques_four"/>
        <RadioGroup
                style="@style/HeightWidth"
                android:background="#BBDEFB"
                android:layout_marginBottom="10dp">
            <RadioButton
                    android:id="@+id/kalam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kalam"
                    android:onClick="correctAnswer"/>
            <RadioButton
                    android:id="@+id/sarabhai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sarabhai"
                    android:onClick="correctAnswer"/>
        </RadioGroup>
        <TextView
                style="@style/HeightWidth"
                android:background="#D4E157"
                android:text="@string/ques_five"/>
        <RadioGroup
                style="@style/HeightWidth"
                android:layout_marginBottom="10dp"
                android:background="#D4E157">
            <RadioButton
                    android:id="@+id/patel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sardar Vallabhbhai Patel"
                    android:onClick="correctAnswer"/>
            <RadioButton
                    android:id="@+id/lala"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lala Lajpat Rai"
                    android:onClick="correctAnswer"/>
        </RadioGroup>
        <TextView
                style="@style/HeightWidth"
                android:background="#FFEE58"
                android:layout_marginBottom="2dp"
                android:text="6. In which year India got independence?"/>
        <EditText
                android:id="@+id/independence_year"
                style="@style/HeightWidth"
                android:layout_height="wrap_content"
                android:background="#FFEE58"
                android:layout_marginBottom="10dp"
                android:hint="Enter year here"
                android:inputType="number"/>
        <TextView
                style="@style/HeightWidth"
                android:background="#FFB74D"
                android:text="7. Rani Lakshmi Bai is also known by names?"/>
        <CheckBox
                android:id="@+id/jhansi_ki_rani"
                style="@style/HeightWidth"
                android:background="#FFB74D"
                android:text="Jhansi Ki Rani"/>
        <CheckBox
                android:id="@+id/mannu"
                style="@style/HeightWidth"
                android:background="#FFB74D"
                android:text="Mannu"/>
        <CheckBox
                style="@style/HeightWidth"
                android:background="#FFB74D"
                android:layout_marginBottom="10dp"
                android:text="Iron Lady"/>
        <TextView
                style="@style/HeightWidth"
                android:background="#FF7043"
                android:text="8. Identify the image and write his name"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/swami"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"/>
        <EditText
                android:id="@+id/swami_vivekananda"
                android:background="#FF7043"
                android:hint="Enter name here"
                style="@style/HeightWidth"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUBMIT"
                android:layout_gravity="center_horizontal"
                android:onClick="checkResults"/>
    </LinearLayout>
</ScrollView>
